# virtualenv-seedhelper

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  tox.ini  virtualenv_seedhelper.py
.github/workflows/: ci.yaml
examples/download/: tox.ini
examples/require/: pyproject.toml  tox.ini
tests/: test_download.py  test_require.py
